# nodaclaw

./: .gitignore  Cargo.toml  README.md
crates/chat/: Cargo.toml
crates/chat/src/: lib.rs  runtime.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: chat.rs  server.rs  state.rs
crates/nodamem-adapter/: Cargo.toml
crates/nodamem-adapter/src/: lib.rs
crates/web/src/: api.rs  lib.rs
crates/web/src/assets/js/: page-memory-graph.js  page-settings.js  ui.js
crates/web/src/assets/js/components/: session-header.js
docs/: book.toml  nodamem-integration.md
docs/src/: index.md
